Add load img button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="action-buttons">
         <button class="run-animation">Make it awesome</button>
         <button class="revert-animation">Revert animation</button>
+        <button class="load-image">Load new image</button>
     </div>
     <script type="text/javascript" src="/js/script.js"></script>
 </body>
