Add image loading with a canvas overlay

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="slide">
-        <img width="350" src="https://cdn.shopify.com/s/files/1/0517/6197/1381/products/DPC22P1784001-5_355x@2x.jpg?v=1617343465"/>
+        <img width="350" data-index="1" src="https://cdn.shopify.com/s/files/1/0517/6197/1381/products/DPC22P1784001-5_355x@2x.jpg?v=1617343465"/>
         <canvas class="slider-animation"></canvas>
     </div>
     <div class="color-samples">
